--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     style="padding-left: 310px; padding-right: 200px"
   >
     <nav
-      class="bg-top-nav flex items-center justify-between fixed top-0 left-0 w-screen p-6"
+      class="bg-top-nav flex items-center justify-between fixed top-0 left-0 w-screen p-6" 
     >
       <div class="flex">
         <div class="w-52">
@@ -49,7 +49,7 @@
             style="padding: 5px; background: white; color: black"
             class="flex"
           >
-            <p>450123 File(s)</p>
+            <p>450123File(s)</p>
             <i
               class="bx bxs-chevron-down text-2xl"
               style="padding-left: 5px"
@@ -64,9 +64,9 @@
       <div class="flex gap-5">
         <div class="flex items-center">
           <i class="bx bxs-cog text-2xl"></i>
-          <p>Advance settings</p>
+          <p>Advancesettings</p>
         </div>
-        <div class="flex items-center">
+        <div class="flex items-center" style="margin-right: 10px;">
           <i class="bx bxs-user-circle text-2xl"></i>
           <span>Tazim</span>
         </div>
@@ -79,7 +79,7 @@
         <div class="flex">
           <div class="flex items-center">
             <i class="bx bx-cloud-upload text-2xl"></i>
-            <span>import files..</span>
+            <span>importFiles..</span>
           </div>
           <div class="items-center flex px-52 gap-5" style="padding-left:180px">
             <div class="flex items-center">
@@ -106,7 +106,7 @@
             <i class="bx bxs-grid-alt text-2xl"></i>
             <i class="bx bxs-grid text-2xl"></i>
           </div>
-          <div class="flex p-r">X Delete</div>
+          <div class="flex p-r" style="margin-right: 10px;">XDelete</div>
         </div>
       </div>
     </div>
@@ -189,49 +189,40 @@
       <div class="flex flex-col gap-2">
         <div style="position:relaive">
         <img src="../assets/img-1.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
+       
       </div>
       <div style="position:relaive">
         <img src="../assets/img-11.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
+       
       </div>
       <div style="position:relaive">
         <img src="../assets/img-3.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
         <img src="../assets/img-4.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
         <img src="../assets/img-5.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
-        <img src="../assets/img-6.jpeg" alt="" style="width:100%" />
       </div>
       </div>
 
       <div class="flex flex-col gap-2">
         <div style="position:relaive">
         <img src="../assets/img-5.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
         <img src="../assets/img-4.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
         <img src="../assets/img-3.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
         <img src="../assets/img-4.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
         <img src="../assets/img-10.jpeg" alt="" style="width:100%" />
-        <div style="position:absolute; font-weight:bold"> image</div>
       </div>
       <div style="position:relaive">
         <img src="../assets/img-11.jpeg" alt="" style="width:100%" />
